<resources>
    <string name="app_name">OpiniUs</string>
    <string name="judul">Judul :</string>
    <string name="judulTipeJawab">Pilih Tipe Jawab :</string>
    <string name="isian">Isian</string>
    <string name="pilih_satu">Pilih Satu</string>
    <string name="pilih_banyak">Pilih Banyak</string>
    <string name="tombol_lanjut">Lanjut</string>
    <string name="button_cancel">Batal</string>
    <string name="answer_title">Jawaban :</string>
    <string name="pertanyaan">Pertanyaan :</string>
    <string name="tambah_survey">Tambah Survey</string>
    <string name="lihat_survey">Lihat Survey</string>
    <string name="save_survey">Save</string>
    <string name="tambah_pertanyaan">Tambah Pertanyaan</string>
    <string name="masukkan_judul_survey">Masukkan Judul Survey</string>
    <string name="button_save">Simpan</string>
    <string name="short_answer_hint">Jawab...</string>
    <string name="question_hint">Pertanyaan...</string>
    <string name="add_choice">Add Choice</string>
    <string name="add_new_choice">Add new choice</string>
    <string name="msg_no_questions">No Active Survey found!</string>
    <string name="submit_survey">Submit Survey</string>
    <string name="no_questions_found">No Questions found!</string>
    <string name="delete_all_survey">Hapus semua survey</string>
    <string name="send_to">Share Survey</string>
    <string name="no_completed_survey_found">No Completed Survey Found</string>
</resources>
