<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".view.questionForm.FormSingleAnswerActivity">

    <EditText
        android:id="@+id/question_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:hint="@string/question_hint"
        android:inputType="text" />

    <TextView
        android:id="@+id/answer_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/question_content"
        android:text="@string/answer_title"
        android:textSize="@dimen/titleSize" />

    <EditText
        android:id="@+id/answer_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_new_choice"
        android:layout_below="@id/answer_title"
        android:inputType="text" />

    <ListView
        android:id="@+id/checkbox_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/button_save"
        android:layout_below="@id/answer_input" />

    <Button
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:onClick="save"
        android:text="@string/button_save" />

    <Button
        android:id="@+id/button_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@id/button_save"
        android:layout_toStartOf="@id/button_save"
        android:onClick="cancel"
        android:text="@string/button_cancel" />

    <Button
        android:id="@+id/add_choice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/add_choice" />

</RelativeLayout>
