<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".view.questionForm.FormShortAnswerActivity">

    <TextView
        android:id="@+id/question_title_short"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/pertanyaan"
        android:textSize="@dimen/titleSize" />

    <EditText
        android:id="@+id/question_content_short"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/question_title_short"
        android:hint="@string/question_hint"
        android:inputType="textCapSentences" />

    <Button
        android:id="@+id/button_save_short"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:onClick="save"
        android:text="@string/button_save" />

    <Button
        android:id="@+id/button_cancel_short"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@id/button_save_short"
        android:layout_toStartOf="@id/button_save_short"
        android:onClick="cancel"
        android:text="@string/button_cancel" />

</RelativeLayout>
